<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2010  Ulysses Levy
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 * @author Ulysses Levy
 * @version 1.0
 */
--> 

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="Select Ferry Route">
        <ListPreference
               android:key="PreferenceFerryMode"
               android:title="Set Ferry Route"
               android:summary="Select a ferry route."
               android:defaultValue="0"
               android:entries="@array/modes"
               android:entryValues="@array/modes_values"
               android:persistent="true" />   
    </PreferenceCategory>
    <PreferenceCategory
            android:title="Port Selection Settings">
            
       
           
                
       <CheckBoxPreference
       			android:key="DisableAutoLocation"
                android:title="@string/preference_auto_location"
                android:summaryOn="@string/preference_summary_disable_auto_location"
                android:summaryOff="@string/preference_summary_disable_auto_location"
                android:defaultValue="false"
                android:persistent="true"
                />     
                
        <ListPreference
           android:key="ManualDestination"
           android:title="@string/preference_title_manually_select_destination"
           android:summary="@string/preference_summary_manually_select_destination"
           android:dependency="DisableAutoLocation"
           android:defaultValue="0"
           android:entries="@array/ports"
           android:entryValues="@array/ports_values"
           android:persistent="true" />    
                
    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="Color Settings">
       <ListPreference
           android:key="PreferenceTextColor"
           android:title="Text Color"
           android:summary="Set Text Color"
           android:defaultValue="9"
           android:entries="@array/colors"
           android:entryValues="@array/colors_values"
           android:persistent="true" /> 
           
       <ListPreference
           android:key="PreferenceBackgroundColor"
           android:title="Background Color"
           android:summary="Set Background Color"
           android:defaultValue="0"
           android:entries="@array/colors"
           android:entryValues="@array/colors_values"
           android:persistent="true" />   
    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="[ Advanced Settings ]" >
        <ListPreference
           android:key="PreferenceBulletinLength"
           android:title="Bulletin Length"
           android:summary="Set the Bulletin Summary Length (Defaults to tall or 160 characters)."
           android:defaultValue="160"
           android:entries="@array/bulletins"
           android:entryValues="@array/bulletins_values"
           android:persistent="true" />
        <CheckBoxPreference
   			android:key="PreferenceShowAllBulletins"
            android:title="Default to Showing All Ferry Alert Bulletins on Empty"
            android:summaryOn="Default to Showing All Ferry Alert Bulletins on Empty"
            android:summaryOff="Default to Showing All Ferry Alert Bulletins on Empty"
            android:defaultValue="true"
            android:persistent="true"
            />
        <ListPreference
           android:key="PreferenceHourlyUpdate"
           android:title="Set Download Frequency"
           android:summary="Force-Update Frequency Based on Last Modified Date. (ie.  If set to 6 Hours, then if our schedule is more then 6 hours old, we will download a new one)"
           android:defaultValue="6"
           android:entries="@array/updates"
           android:entryValues="@array/updates_values"
           android:persistent="true" />
           
        <CheckBoxPreference
       			android:key="PreferenceShowAdditional"
                android:title="Show Additional Info"
                android:summaryOn="(Warning : Potentially Crowds Screen!) Toggles Last Refresh/Updated."
                android:summaryOff="(Warning : Potentially Crowds Screen!)Toggles Last Refresh/Updated."
                android:defaultValue="false"
                android:persistent="true"
                />
        
                
        <CheckBoxPreference
       			android:key="PreferenceCustomMode"
                android:title="Enable Custom Settings"
                android:summaryOn="Enables Advanced Settings For Custom Ferry Mode (Not for newbs!)."
                android:summaryOff="Enables Advanced Settings For Custom Ferry Mode (Not for newbs!)."
                android:defaultValue="false"
                android:persistent="true"
                />
                
        <PreferenceScreen
            android:title="URL Definitions">
            <EditTextPreference
                android:key="FerryScheduleURL"
                android:title="@string/preference_title_ferry_schedule_url"
                android:summary="@string/preference_summary_ferry_schedule_url"
                android:dialogTitle="@string/preference_dialog_title_ferry_schedule_url" 
                android:defaultValue="@string/preference_default_value_ferry_schedule_url"
                android:persistent="true"
                android:dependency="PreferenceCustomMode"/>
            <EditTextPreference
                android:key="SeattleFerryCamURL"
                android:title="Port 1 Ferry Cam"
                android:summary="Port 1 Ferry Cam (ie. Seattle)"
                android:dialogTitle="@string/preference_dialog_title_seattle_ferry_cam_url" 
                android:defaultValue="@string/preference_default_value_seattle_ferry_cam_url"
                android:persistent="true"
                android:dependency="PreferenceCustomMode"/>
            <EditTextPreference
                android:key="BainbridgeFerryCamURL"
                android:title="Port 2 Ferry Cam"
                android:summary="Port 2 Ferry Cam URL (ie. Bainbridge)"
                android:dialogTitle="@string/preference_dialog_title_bainbridge_ferry_cam_url" 
                android:defaultValue="@string/preference_default_value_bainbridge_ferry_cam_url"
                android:persistent="true"
                android:dependency="PreferenceCustomMode"/>
            <EditTextPreference
                android:key="PreferenceVesselWatchUrl"
                android:title="Vessel Watch Url"
                android:summary="Vessel Watch Url"
                android:dialogTitle="Vessel Watch Url" 
                android:defaultValue="@string/hardcoded_bainbridge_to_seattle_vessel_watch_url"
                android:persistent="true"
                android:dependency="PreferenceCustomMode"/>
        </PreferenceScreen> 
        <PreferenceScreen
            android:title="Port Definitions">
            <EditTextPreference
                android:key="SubstringDestinationA"
                android:title="@string/preference_title_substring_destination_a"
                android:summary="@string/preference_summary_substring_destination_a"
                android:dialogTitle="@string/preference_dialog_title_substring_destination_a" 
                android:defaultValue="@string/preference_default_value_substring_destination_a"
                android:persistent="true"
                android:dependency="PreferenceCustomMode"/>
            <EditTextPreference
                android:key="SubstringDestinationB"
                android:title="@string/preference_title_substring_destination_b"
                android:summary="@string/preference_summary_substring_destination_b"
                android:dialogTitle="@string/preference_dialog_title_substring_destination_b" 
                android:defaultValue="@string/preference_default_value_substring_destination_b"
                android:persistent="true"
                android:dependency="PreferenceCustomMode"/>
        </PreferenceScreen> 
        <PreferenceScreen
            android:title="GPS Definitions">
            <EditTextPreference
                android:key="PreferencePortOneLat"
                android:title="Port One Latitude"
                android:summary="Port One Latitude"
                android:dialogTitle="Port One Latitude" 
                android:defaultValue="@string/hardcoded_bainbridge_to_seattle_port_1_lat"
                android:persistent="true"
                android:dependency="PreferenceCustomMode"/>
            <EditTextPreference
                android:key="PreferencePortOneLong"
                android:title="Port One Longitude"
                android:summary="Port One Longitude"
                android:dialogTitle="Port One Longitude" 
                android:defaultValue="@string/hardcoded_bainbridge_to_seattle_port_1_long"
                android:persistent="true"
                android:dependency="PreferenceCustomMode"/>
            <EditTextPreference
                android:key="PreferencePortTwoLat"
                android:title="Port Two Latitude"
                android:summary="Port Two Latitude"
                android:dialogTitle="Port Two Latitude" 
                android:defaultValue="@string/hardcoded_bainbridge_to_seattle_port_2_lat"
                android:persistent="true"
                android:dependency="PreferenceCustomMode"/>
            <EditTextPreference
                android:key="PreferencePortTwoLong"
                android:title="Port Two Longitude"
                android:summary="Port Two Longitude"
                android:dialogTitle="Port Two Longitude" 
                android:defaultValue="@string/hardcoded_bainbridge_to_seattle_port_2_long"
                android:persistent="true"
                android:dependency="PreferenceCustomMode"/>
        </PreferenceScreen>     
        <PreferenceScreen
            android:title="Regex Definition">
            <EditTextPreference
                android:key="FerryScheduleRegex"
                android:title="@string/preference_title_ferry_schedule_regex"
                android:summary="@string/preference_summary_ferry_schedule_regex"
                android:dialogTitle="@string/preference_dialog_title_ferry_schedule_regex" 
                android:defaultValue="@string/hardcoded_bainbridge_to_seattle_regex"
                android:persistent="true"
                android:dependency="PreferenceCustomMode"/>
            <EditTextPreference
                android:key="PreferenceBulletinRegex"
                android:title="Bulletin Regex"
                android:summary="For the ferry alert bulletin"
                android:dialogTitle="Bulletin Regex" 
                android:defaultValue="@string/hardcoded_bainbridge_to_seattle_regex_bulletin"
                android:persistent="true"
                android:dependency="PreferenceCustomMode"/>
            <!-- bad way of saving a variable -->
            <EditTextPreference
                android:key="PreferenceLastPort"
                android:title="read only"
                android:summary="read only value"
                android:dialogTitle="read only" 
                android:defaultValue="Leaving Seattle"
                android:persistent="true"
                android:enabled="false"
                android:selectable="false"/>
        </PreferenceScreen> 
    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/preference_about">
        <PreferenceScreen
                android:title="@string/preference_misc">
            <Preference
	                android:title="@string/preference_about_title"
	                android:summary="@string/preference_about_summary"
	                android:enabled="false"
	                android:selectable="false" />
            <Preference
	                android:title="src"
	                android:summary="@string/preference_about_source"
	                android:enabled="false"
	                android:selectable="false" />
	        <PreferenceScreen
                android:title="view src">
                <intent android:action="android.intent.action.VIEW"
                    android:data="@string/preference_about_source_url" />
            </PreferenceScreen>
	                
	        <Preference
	                android:title="@string/preference_licence_title"
	                android:summary="@string/preference_licence_summary"
	                android:enabled="false"
	                android:selectable="false" />
		</PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>
